# ChangeLog for catalyst
# Copyright 2002-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2

  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/output.py, modules/catalyst/support.py,
  modules/catalyst/target/generic_stage.py, modules/catalyst/target/grp.py,
  modules/catalyst/target/netboot.py, modules/catalyst/target/netboot2.py,
  modules/catalyst/target/tinderbox.py, modules/catalyst/util.py:
  Move list_bashify() from catalyst.support to catalyst.util

  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/support.py, modules/catalyst/target/generic_stage.py,
  modules/catalyst/target/livecd_stage2.py, modules/catalyst/util.py:
  Replace catalyst.support.read_from_clst() with catalyst.util.readfile()
  and update references

  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> catalyst,
  modules/catalyst/util.py:
  Modify global import from catalyst.support to just import what's needed

  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> catalyst,
  modules/catalyst/support.py, modules/catalyst/util.py:
  Move find_binary() from catalyst.support to catalyst.util

  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> catalyst,
  modules/catalyst/arch/__init__.py, +modules/catalyst/output.py,
  modules/catalyst/support.py, modules/catalyst/target/__init__.py,
  modules/catalyst/target/generic_stage.py:
  Move msg(), warn(), and die() to catalyst.output and update all references

  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> catalyst:
  Load defaults into myconf before parsing config

  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> catalyst:
  Condense code that checks for various things in 'options' to use a loop

  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/arch/__init__.py, modules/catalyst/target/__init__.py,
  modules/catalyst/target/generic_stage.py:
  Get rid of arches and targets classes and move functions into the module
  instead
