@@ -205,18 +205,6 @@ valid_config_file_values.append("SEEDCACHE")
 
 verbosity=1
 
-def list_to_string(mylist):
-	if type(mylist)==types.StringType:
-		mypack=[mylist]
-	else:
-		mypack=mylist[:]
-	for x in range(0,len(mypack)):
-		# surround args with quotes for passing to bash,
-		# allows things like "<" to remain intact
-		mypack[x]=mypack[x]
-	mypack=string.join(mypack)
-	return mypack
-
 class CatalystError(Exception):
 	def __init__(self, message):
 		if message:
