@@ -3,6 +3,11 @@
 # Distributed under the GPL v2
 
   11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
+  modules/catalyst/support.py, modules/catalyst/target/stage1.py,
+  modules/catalyst/target/stage2.py, modules/catalyst/util.py:
+  Move list_to_string() from catalyst.support to catalyst.util
+
+  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
   modules/catalyst/output.py, modules/catalyst/support.py,
   modules/catalyst/target/generic_stage.py, modules/catalyst/target/grp.py,
   modules/catalyst/target/netboot.py, modules/catalyst/target/netboot2.py,
